<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegDetalles">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".40">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/volActualLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="16dp"
                    android:text="Volumen actual:"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/volActual"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/volActual"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/volActualLabel"
                    android:text="@string/volActual"
                    android:textAlignment="center"
                    android:textSize="40sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="-" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </RelativeLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=">>>"
                android:textSize="34sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".45">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/volEstimadoLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="Volumen estimado:"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/estimacion"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/estimacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/volEstimadoLabel"
                    android:text="@string/estimacion"
                    android:textAlignment="center"
                    android:textColor="#534F4F"
                    android:textSize="40sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="0t" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </RelativeLayout>

    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/Previsiones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Previsiones climáticas:"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TableLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Previsiones">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/mediaTable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".33"
                android:text="Media"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tempTabla"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".33"
                android:text="Temp"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/hrelTable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".33"
                android:text="Hrel"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/actualTable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".33"
                android:text="Actual"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tempActual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".33"
                android:text="@string/tempActual"
                android:textAlignment="center"
                android:textColor="#534F4F"
                android:textSize="34sp"
                tools:text="20ºC" />

            <TextView
                android:id="@+id/hrelActual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".33"
                android:text="@string/hrelActual"
                android:textAlignment="center"
                android:textColor="#534F4F"
                android:textSize="34sp"
                tools:text="50%" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/prxSemTable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".33"
                android:text="Prox Semana"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tempPrxSem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".33"
                android:text="@string/tempPrxSem"
                android:textAlignment="center"
                android:textColor="#534F4F"
                android:textSize="34sp"
                tools:text="20ºC" />

            <TextView
                android:id="@+id/hrelPrxSem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".33"
                android:text="@string/hrelPrxSem"
                android:textAlignment="center"
                android:textColor="#534F4F"
                android:textSize="34sp"
                tools:text="50%" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>